--- a/index.html
+++ b/index.html
@@ -1,9 +1,7 @@
 ---
 author_profile: false
 layout: home
-classes:
-  - dark-theme
 header:
-	image: assets/images/camp.png
+	image: /assets/images/camp.png
 ---
 
