--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@ author_profile: false
 layout: home
 
 sidebar:
-  - image: assets/images/eye_see_you_by_justyoungheroes-da42u4g.gif
-  - image: assets/images/static_is_pretty_cool__too_by_unikitten-d888r4x.gif
+  - title: "Test 1" 
+    image: assets/images/eye_see_you_by_justyoungheroes-da42u4g.gif
+    text: "does this show up?"
+  - title: "Test 2"
+    image: assets/images/static_is_pretty_cool__too_by_unikitten-d888r4x.gif
 ---
 
