--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 ---
 author_profile: false
 layout: home
+header:
+	image: url(https://cdnb.artstation.com/p/assets/images/images/024/538/827/original/pixel-jeff-clipa-s.gif?1582740711)
 ---
 
