--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 author_profile: false
 layout: home
 header:
-	image: url(https://cdnb.artstation.com/p/assets/images/images/024/538/827/original/pixel-jeff-clipa-s.gif?1582740711)
+	overlay_image: /assets/images/header.gif
 ---
 
